# ai-skills

./: .gitignore  AGENTS.md  Justfile  README.md
.github/: copilot-instructions.md
.github/instructions/: build-automation.instructions.md  wasm-components.instructions.md  wasm-tooling.instructions.md
.github/prompts/: build-component.md  debug-runtime.md  publish-component.md
.github/workflows/: e2e-test-components-asw101-1.yml
_/: .gitignore  2026-01-19-issue-1.md  2026-04-29-COMPONENT-NOTES.md  2026-04-29-component-registry-improvements.md  2026-04-29-consolidation-plan.md  2026-05-02-test-results.md  COPILOT-OPUS45.md  README.md  TEST-RESULTS.md  component-registry-improvements.md
codex/all-skills/: DOCS.md  INSTRUCTIONS.md  tools.toml
components/: .gitignore  Justfile  README.md  stock-ticker.wasm  tech-ticker.wasm
components/_/: CODEX-GPT52-CODEX.md
components/copilot-py/: .gitignore  README.md  app.py
components/copilot-rs/: .gitignore  Cargo.toml  README.md
components/copilot-rs/src/: lib.rs
components/copilot-rs/wit/: world.wit
components/csv-groupby/: .gitignore  Cargo.toml  README.md  USAGE.md  build.sh
components/github-go/: .gitignore  README.md  go.mod  main.go
components/tech-ticker/: Cargo.toml  README.md
components/tech-ticker/src/: lib.rs
components/tech-ticker/wit/: world.wit
docs/: README.md  agent-skills.md  allowed-tools.md  components.md  skill-routing.md  skills-overview.md
notes/: COMPONENT-CLI-NOTES.md  COMPONENT-NOTES.md  CONSOLIDATION-PLAN.md  ISSUE-1.md  component-registry-improvements.md
(+97 files in other folders)
