[package]
name = "tech-ticker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# 0.57+ is the first wit-bindgen with stream<>/future<>/async-fn codegen.
wit-bindgen = "0.57.1"

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
